Added .env.example files for all services, implemented global exception handling, and added reusable DTOs and configurations.